chore: use TailwindCss

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Vite + React + TS</title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body class="mx-auto">
+  <div id="root" class="w-full bg-stone-800 shadow-2xl p-12"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
