chore: use ShadCn

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark h-full">
 
 <head>
   <meta charset="UTF-8" />
@@ -8,8 +8,8 @@
   <title>Vite + React + TS</title>
 </head>
 
-<body class="mx-auto">
-  <div id="root" class="w-full bg-stone-800 shadow-2xl p-12"></div>
+<body class="mx-auto dark:bg-stone-900 max-w-4xl flex flex-col h-full">
+  <div id="root" class="w-full bg-stone-800 text-white p-12 grow"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
