--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark h-full">
+<html lang="en" class="h-full">
 
 <head>
   <meta charset="UTF-8" />
@@ -9,7 +9,7 @@
 </head>
 
 <body class="mx-auto dark:bg-stone-900 max-w-4xl flex flex-col h-full">
-  <div id="root" class="w-full bg-stone-800 text-white p-12 grow"></div>
+  <div id="root" class="w-full dark:bg-stone-800 dark:text-white bg-gradient-to-b from-blue-50 to-white p-12 grow"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
