--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <title>Vet Web</title>
 </head>
 
-<body class="mx-auto dark:bg-stone-900 max-w-4xl flex flex-col overflow-auto bg-fixed h-full bg-blue-50">
-  <div id="root" class="w-full dark:bg-stone-800 dark:text-white bg-gradient-to-b bg-fixed from-blue-50 to-white p-12 grow"></div>
+<body class="flex flex-col dark:bg-stone-900 h-full bg-fixed bg-blue-50">
+  <div id="root" class="w-full max-w-4xl mx-auto dark:bg-stone-800 dark:text-white bg-gradient-to-b bg-fixed from-blue-50 to-white p-12 grow"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
